--- a/examples/Algorithms/qr.ipynb
+++ b/examples/Algorithms/qr.ipynb
@@ -9,18 +9,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFrost module loaded!\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "No common parent found",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 69\u001b[0m\n\u001b[0;32m     65\u001b[0m     Q[j, n\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m=\u001b[39m A[j, n\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m/\u001b[39m R[n\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, n\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m     67\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m [Q, R]\n\u001b[1;32m---> 69\u001b[0m qr \u001b[38;5;241m=\u001b[39m \u001b[43mtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompile\u001b[49m\u001b[43m(\u001b[49m\u001b[43mQRDecomposition\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: No common parent found"
+      "TensorFrost module loaded!\n",
+      "QRDecomposition:\n",
+      "  Kernel count: 8\n",
+      "  Intermediate buffers: 0\n",
+      "  Host readbacks: 0\n",
+      "  Host writes: 0\n",
+      "  Lines of generated code: 394\n",
+      "  IR Compile time: 1.796400 ms\n",
+      "  Compiler time: 1523.813477 ms\n",
+      "\n"
      ]
     }
    ],
@@ -98,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -107,20 +105,20 @@
      "text": [
       "QR decomposition is correct: True\n",
       "QR decomposition using TensorFrost is correct: True\n",
-      "Error: 1.4686870114880517e-16\n",
-      "Error using TensorFrost: 1.473572403332277e-07\n",
+      "Error: 1.1102230246251565e-16\n",
+      "Error using TensorFrost: 9.80524335107431e-08\n",
       "Q:\n",
-      " [[ 0.59719115 -0.20963228  0.5872611  -0.27012587 -0.42611438]\n",
-      " [ 0.09662561  0.5911799  -0.06833504  0.5370069  -0.59002006]\n",
-      " [ 0.28360906  0.47443348  0.45918897  0.21260762  0.66213495]\n",
-      " [ 0.36185166 -0.5774531  -0.15089278  0.70275533  0.1377597 ]\n",
-      " [ 0.6501196   0.219138   -0.64562505 -0.31557667  0.1135895 ]]\n",
+      " [[ 0.12411568  0.7326195  -0.22203594  0.49314734  0.39416975]\n",
+      " [ 0.57611185  0.37130576 -0.2244676  -0.6756834  -0.1526212 ]\n",
+      " [ 0.17443486  0.29325262  0.45711353  0.3281024  -0.75297487]\n",
+      " [ 0.36590293 -0.04185599  0.77686805 -0.08293105  0.50394624]\n",
+      " [ 0.6988403  -0.4874952  -0.29637414  0.4309628  -0.02009838]]\n",
       "R:\n",
-      " [[ 1.3671392   1.0887116   1.0798173   1.362275    0.88334846]\n",
-      " [ 0.          0.4051053   0.34498546  0.33760527 -0.19620542]\n",
-      " [ 0.          0.          0.6996289   0.22130297  0.04256443]\n",
-      " [ 0.          0.          0.          0.15314572  0.73374885]\n",
-      " [ 0.          0.          0.          0.          0.31238165]]\n"
+      " [[ 1.0132961   0.9248877   0.8464499   1.1308571   0.9522835 ]\n",
+      " [ 0.          0.9544738   0.7976799   0.76563853  0.13753597]\n",
+      " [ 0.          0.          0.6116486   0.28257155 -0.01758742]\n",
+      " [ 0.          0.          0.          0.6672542   0.3415734 ]\n",
+      " [ 0.          0.          0.          0.          0.28049704]]\n"
      ]
     }
    ],
@@ -152,17 +150,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time for TensorFrost QR decomposition: 0.15400099754333496\n",
-      "Time for built-in NumPy QR decomposition: 3.8292949199676514\n",
-      "Error: 0.0012286016\n",
-      "Error using TensorFrost: 0.0018778603\n"
+      "Time for TensorFrost QR decomposition: 0.18627309799194336\n",
+      "Time for built-in NumPy QR decomposition: 4.043566703796387\n",
+      "Error: 0.0012291038\n",
+      "Error using TensorFrost: 0.001878134\n"
      ]
     }
    ],
