--- a/examples/Rendering/buddhabrot.ipynb
+++ b/examples/Rendering/buddhabrot.ipynb
@@ -2,21 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TensorFrost module loaded!\n",
       "mandelbrot:\n",
       "  Kernel count: 4\n",
       "  Intermediate buffers: 1\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 383\n",
-      "  IR Compile time: 2.997500 ms\n",
-      "  Compiler time: 1359.449951 ms\n",
+      "  Lines of generated code: 384\n",
+      "  IR Compile time: 3.231900 ms\n",
+      "  Compiler time: 1429.150513 ms\n",
       "\n"
      ]
     }
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
