--- a/examples/Rendering/mandelbrot.ipynb
+++ b/examples/Rendering/mandelbrot.ipynb
@@ -9,17 +9,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFrost module loaded!\n",
-      "mandelbrot:\n",
-      "  Kernel count: 2\n",
-      "  Intermediate buffers: 0\n",
-      "  Host readbacks: 0\n",
-      "  Host writes: 0\n",
-      "  Lines of generated code: 367\n",
-      "  IR Compile time: 1.059500 ms\n",
-      "  Compiler time: 1392.433838 ms\n",
-      "\n",
-      "(2048, 2048, 3)\n"
+      "TensorFrost module loaded!\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'TensorFrost' has no attribute 'vec'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 33\u001b[0m\n\u001b[0;32m     29\u001b[0m     output[i, j, :] \u001b[38;5;241m=\u001b[39m color_func(sl, tf\u001b[38;5;241m.\u001b[39mvec(\u001b[38;5;241m0.0\u001b[39m,\u001b[38;5;241m0.3\u001b[39m,\u001b[38;5;241m0.6\u001b[39m))\n\u001b[0;32m     31\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m [output]\n\u001b[1;32m---> 33\u001b[0m mand \u001b[38;5;241m=\u001b[39m \u001b[43mtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompile\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmandelbrot\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     34\u001b[0m res \u001b[38;5;241m=\u001b[39m mand()\n\u001b[0;32m     35\u001b[0m resnp \u001b[38;5;241m=\u001b[39m res[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mnumpy\n",
+      "Cell \u001b[1;32mIn[1], line 16\u001b[0m, in \u001b[0;36mmandelbrot\u001b[1;34m()\u001b[0m\n\u001b[0;32m     14\u001b[0m output \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mzeros([S, S, \u001b[38;5;241m3\u001b[39m], tf\u001b[38;5;241m.\u001b[39mfloat32)\n\u001b[0;32m     15\u001b[0m i, j \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mindices([S, S])\n\u001b[1;32m---> 16\u001b[0m pos \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mfloat(\u001b[43mtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvec\u001b[49m(i, j))\n\u001b[0;32m     17\u001b[0m z \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mvec(\u001b[38;5;241m0.0\u001b[39m, \u001b[38;5;241m0.0\u001b[39m)\n\u001b[0;32m     18\u001b[0m l \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mconst(\u001b[38;5;241m0.0\u001b[39m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'TensorFrost' has no attribute 'vec'"
      ]
     }
    ],
@@ -37,32 +39,24 @@
     "\treturn 0.5 + 0.5*tf.cos(3.0 + x*0.15 + o)\n",
     "\n",
     "def mandelbrot():\n",
-    "    canvas = tf.zeros([S, S, 3], tf.float32)\n",
+    "    output = tf.zeros([S, S, 3], tf.float32)\n",
     "    i, j = tf.indices([S, S])\n",
-    "    y, x = tf.float(i), tf.float(j)\n",
-    "\n",
-    "    z_re = tf.zeros([S, S], tf.float32)\n",
-    "    z_im = tf.zeros([S, S], tf.float32)\n",
-    "    l = tf.zeros([S, S], tf.float32)\n",
-    "    c_re = x * (3.0 / S) - 2.0\n",
-    "    c_im = y * (3.0 / S) - 1.5\n",
+    "    pos = tf.float(tf.vec(i, j))\n",
+    "    z = tf.vec(0.0, 0.0)\n",
+    "    l = tf.const(0.0)\n",
+    "    c = (pos * (3.0 / S) - 2.0) + tf.vec(0.0, -1.5)\n",
     "    def loop_body(k):\n",
-    "        z_re_new = z_re*z_re - z_im*z_im + c_re\n",
-    "        z_im_new = 2.0*z_re*z_im + c_im\n",
-    "        z_re.set(z_re_new)\n",
-    "        z_im.set(z_im_new)\n",
-    "        tf.if_cond((z_re*z_re + z_im*z_im) > 256.0, lambda: tf.break_loop())\n",
-    "        l.set(l + 1.0)\n",
+    "        z.val = tf.vec(z.x*z.x - z.y*z.y + c.x, 2.0*z.x*z.y + c.y)\n",
+    "        tf.if_cond(tf.dot(z, z) > 4.0, tf.break_loop)\n",
+    "        l.val += 1\n",
     "         \n",
     "    tf.loop(loop_body, 0, 128, 1)\n",
     "\n",
-    "    sl = tf.select(l < 128.0, l - tf.log2(tf.log2(z_re*z_re + z_im*z_im)) + 4.0, 0.0)\n",
+    "    sl = tf.select(l < 128, l - tf.log2(tf.log2(tf.dot(z,z))) + 4.0, 0.0)\n",
     "\n",
-    "    canvas[i, j, 0] = color_func(sl, 0.0)\n",
-    "    canvas[i, j, 1] = color_func(sl, 0.6)\n",
-    "    canvas[i, j, 2] = color_func(sl, 1.0)\n",
+    "    output[i, j, :] = color_func(sl, tf.vec(0.0,0.3,0.6))\n",
     "\n",
-    "    return [canvas]\n",
+    "    return [output]\n",
     "\n",
     "mand = tf.compile(mandelbrot)\n",
     "res = mand()\n",
@@ -72,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
