--- a/examples/Algorithms/fft.ipynb
+++ b/examples/Algorithms/fft.ipynb
@@ -9,15 +9,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFrost module loaded in debug mode! Expect slow performance.\n",
+      "TensorFrost module loaded!\n",
       "FFT:\n",
       "  Kernel count: 2\n",
       "  Intermediate buffers: 0\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
       "  Lines of generated code: 390\n",
-      "  IR Compile time: 54.958302 ms\n",
-      "  Compiler time: 1334.324219 ms\n",
+      "  IR Compile time: 1.384900 ms\n",
+      "  Compiler time: 1488.626953 ms\n",
       "\n"
      ]
     }
