--- a/examples/Algorithms/random_number_generation.ipynb
+++ b/examples/Algorithms/random_number_generation.ipynb
@@ -2,21 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TensorFrost module loaded!\n",
       "RNG:\n",
       "  Kernel count: 1\n",
       "  Intermediate buffers: 0\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 364\n",
-      "  IR Compile time: 0.183700 ms\n",
-      "  Compiler time: 1368.121826 ms\n",
+      "  Lines of generated code: 378\n",
+      "  IR Compile time: 0.215500 ms\n",
+      "  Compiler time: 1468.560181 ms\n",
       "\n",
       "[ 129708002 2831084092 2055130248 2131687100  678955108 2161170183\n",
       " 4048597412 2120684060  460041413 1301776676 1879086465 1170772408\n",
