Add reshape / improve reduction

--- a/examples/Algorithms/qr.ipynb
+++ b/examples/Algorithms/qr.ipynb
@@ -16,8 +16,8 @@
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
       "  Lines of generated code: 394\n",
-      "  IR Compile time: 1.796400 ms\n",
-      "  Compiler time: 1523.813477 ms\n",
+      "  IR Compile time: 1.510900 ms\n",
+      "  Compiler time: 1348.923706 ms\n",
       "\n"
      ]
     }
@@ -91,7 +91,251 @@
     "\n",
     "    return [Q, R]\n",
     "\n",
+    "def HouseholderQR():\n",
+    "    A = tf.input([-1, -1], tf.float32)\n",
+    "\n",
+    "    m, n = A.shape\n",
+    "    Q = tf.buffer([m, n])\n",
+    "    R = tf.buffer([n, n])\n",
+    "    \n",
+    "    Q = tf.eye(m)\n",
+    "    R = A\n",
+    "\n",
+    "    def loop_body(i):\n",
+    "        H = tf.eye(m)\n",
+    "        H[i:, i:] -= 2 * tf.outer(R[i:, i], R[i:, i]) / tf.norm(R[i:, i])\n",
+    "        Q = Q @ H\n",
+    "        R = H @ R\n",
+    "\n",
+    "    tf.loop(loop_body, 0, tf.min(m, n)-1, 1)\n",
+    "\n",
+    "    return [Q, R]\n",
+    "\n",
     "qr = tf.compile(QRDecomposition)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List of operations:\n",
+      "int v1_0 = input_shape(cost=0.000000, )\n",
+      "int v1_1 = input_shape(cost=0.000000, )\n",
+      "float m0 = memory(memory_type=input, cost=0.000000, modified, shape=[v1_0,v1_1], )\n",
+      "float m1 = memory(memory_type=output, cost=0.000000, modified, shape=[v1_0,v1_1], )\n",
+      "kernel(cost=0.000000, shape=[v1_0,v1_1], )\n",
+      "{\n",
+      "  int v2_0 = thread_id(cost=0.000000, shape=[v1_0,v1_1], )\n",
+      "  store(memory=[m1], inputs=[v2_1(0.f)], indices=[v2_0], cost=128.000000, shape=[v1_0,v1_1], )\n",
+      "}\n",
+      "float m2 = memory(memory_type=output, cost=0.000000, modified, shape=[v1_1,v1_1], )\n",
+      "kernel(cost=0.000000, shape=[v1_1,v1_1], )\n",
+      "{\n",
+      "  int v4_0 = thread_id(cost=0.000000, shape=[v1_1,v1_1], )\n",
+      "  store(memory=[m2], inputs=[v4_1(0.f)], indices=[v4_0], cost=128.000000, shape=[v1_1,v1_1], )\n",
+      "}\n",
+      "int v5_1 = sub(inputs=[v1_1,v5_0(1)], cost=1.000000, )\n",
+      "int v5_4 = loop(inputs=[v5_2(0),v5_1,v5_3(1)], cost=101.000000, )\n",
+      "{\n",
+      "  kernel(cost=0.000000, shape=[v6_1(1)], )\n",
+      "  {\n",
+      "    int v7_3 = loop(inputs=[v7_2(0),v1_0,v7_1(1)], cost=100.000000, )\n",
+      "    {\n",
+      "      int v8_1 = sub(inputs=[v1_0,v8_0(1)], cost=1.000000, )\n",
+      "      int v8_3 = clamp(inputs=[v7_3,v8_2(0),v8_1], cost=105.000000, )\n",
+      "      int v8_4 = mul(inputs=[v8_3,v1_1], cost=106.000000, )\n",
+      "      int v8_6 = sub(inputs=[v1_1,v8_5(1)], cost=1.000000, )\n",
+      "      int v8_8 = clamp(inputs=[v5_4,v8_7(0),v8_6], cost=106.000000, )\n",
+      "      int v8_9 = add(inputs=[v8_4,v8_8], cost=213.000000, )\n",
+      "      float v8_10 = load(memory=[m0], indices=[v8_9], cost=341.000000, )\n",
+      "      float v8_11 = mul(inputs=[v8_10,v8_10], cost=342.000000, )\n",
+      "      float v8_12 = add(inputs=[v7_0(0.f),v8_11], cost=343.000000, shape=[v6_0(1)], )\n",
+      "      set(memory=[v7_0(0.f)], inputs=[v8_12], cost=344.000000, shape=[v6_0(1)], )\n",
+      "    }\n",
+      "    float v9_0 = sqrt(inputs=[v7_0(0.f)], cost=4.000000, shape=[v6_0(1)], )\n",
+      "    int v9_2 = sub(inputs=[v1_1,v9_1(1)], cost=1.000000, )\n",
+      "    int v9_4 = clamp(inputs=[v5_4,v9_3(0),v9_2], cost=106.000000, )\n",
+      "    int v9_5 = mul(inputs=[v9_4,v1_1], cost=107.000000, )\n",
+      "    int v9_7 = sub(inputs=[v1_1,v9_6(1)], cost=1.000000, )\n",
+      "    int v9_9 = clamp(inputs=[v5_4,v9_8(0),v9_7], cost=106.000000, )\n",
+      "    int v9_10 = add(inputs=[v9_5,v9_9], cost=214.000000, )\n",
+      "    store(memory=[m2], inputs=[v9_0], indices=[v9_10], cost=346.000000, shape=[v6_1(1)], )\n",
+      "  }\n",
+      "  kernel(cost=0.000000, shape=[v1_0], )\n",
+      "  {\n",
+      "    int v11_0 = thread_id(cost=0.000000, shape=[v1_0], )\n",
+      "    int v11_2 = sub(inputs=[v1_0,v11_1(1)], cost=1.000000, )\n",
+      "    int v11_4 = clamp(inputs=[v11_0,v11_3(0),v11_2], cost=5.000000, shape=[v1_0], )\n",
+      "    int v11_5 = mul(inputs=[v11_4,v1_1], cost=6.000000, shape=[v1_0], )\n",
+      "    int v11_7 = sub(inputs=[v1_1,v11_6(1)], cost=1.000000, )\n",
+      "    int v11_9 = clamp(inputs=[v5_4,v11_8(0),v11_7], cost=106.000000, )\n",
+      "    int v11_10 = add(inputs=[v11_5,v11_9], cost=113.000000, shape=[v1_0], )\n",
+      "    float v11_11 = load(memory=[m0], indices=[v11_10], cost=241.000000, shape=[v1_0], )\n",
+      "    int v11_13 = sub(inputs=[v1_1,v11_12(1)], cost=1.000000, )\n",
+      "    int v11_15 = clamp(inputs=[v5_4,v11_14(0),v11_13], cost=106.000000, )\n",
+      "    int v11_16 = mul(inputs=[v11_15,v1_1], cost=107.000000, )\n",
+      "    int v11_18 = sub(inputs=[v1_1,v11_17(1)], cost=1.000000, )\n",
+      "    int v11_20 = clamp(inputs=[v5_4,v11_19(0),v11_18], cost=106.000000, )\n",
+      "    int v11_21 = add(inputs=[v11_16,v11_20], cost=214.000000, )\n",
+      "    float v11_22 = load(memory=[m2], indices=[v11_21], cost=342.000000, )\n",
+      "    float v11_23 = div(inputs=[v11_11,v11_22], cost=585.000000, shape=[v1_0], )\n",
+      "    int v11_25 = sub(inputs=[v1_0,v11_24(1)], cost=1.000000, )\n",
+      "    int v11_27 = clamp(inputs=[v11_0,v11_26(0),v11_25], cost=5.000000, shape=[v1_0], )\n",
+      "    int v11_28 = mul(inputs=[v11_27,v1_1], cost=6.000000, shape=[v1_0], )\n",
+      "    int v11_30 = sub(inputs=[v1_1,v11_29(1)], cost=1.000000, )\n",
+      "    int v11_32 = clamp(inputs=[v5_4,v11_31(0),v11_30], cost=106.000000, )\n",
+      "    int v11_33 = add(inputs=[v11_28,v11_32], cost=113.000000, shape=[v1_0], )\n",
+      "    store(memory=[m1], inputs=[v11_23], indices=[v11_33], cost=826.000000, shape=[v1_0], )\n",
+      "  }\n",
+      "  int v12_1 = add(inputs=[v5_4,v12_0(1)], cost=102.000000, )\n",
+      "  int v12_2 = sub(inputs=[v1_1,v12_1], cost=103.000000, )\n",
+      "  int v12_4 = add(inputs=[v5_4,v12_3(1)], cost=102.000000, )\n",
+      "  int v12_5 = sub(inputs=[v1_1,v12_4], cost=103.000000, )\n",
+      "  kernel(cost=0.000000, shape=[v12_5], )\n",
+      "  {\n",
+      "    int v13_0 = thread_id(cost=0.000000, shape=[v12_5], )\n",
+      "    int v13_2 = add(inputs=[v5_4,v13_1(1)], cost=102.000000, )\n",
+      "    int v13_3 = add(inputs=[v13_0,v13_2], cost=103.000000, shape=[v12_2], )\n",
+      "    int v13_7 = loop(inputs=[v13_6(0),v1_0,v13_5(1)], cost=100.000000, )\n",
+      "    {\n",
+      "      int v14_1 = add(inputs=[v5_4,v14_0(1)], cost=102.000000, )\n",
+      "      int v14_2 = add(inputs=[v13_0,v14_1], cost=103.000000, )\n",
+      "      int v14_4 = sub(inputs=[v1_0,v14_3(1)], cost=1.000000, )\n",
+      "      int v14_6 = clamp(inputs=[v13_7,v14_5(0),v14_4], cost=105.000000, )\n",
+      "      int v14_7 = mul(inputs=[v14_6,v1_1], cost=106.000000, )\n",
+      "      int v14_9 = sub(inputs=[v1_1,v14_8(1)], cost=1.000000, )\n",
+      "      int v14_11 = clamp(inputs=[v5_4,v14_10(0),v14_9], cost=106.000000, )\n",
+      "      int v14_12 = add(inputs=[v14_7,v14_11], cost=213.000000, )\n",
+      "      float v14_13 = load(memory=[m1], indices=[v14_12], cost=341.000000, )\n",
+      "      int v14_15 = sub(inputs=[v1_0,v14_14(1)], cost=1.000000, )\n",
+      "      int v14_17 = clamp(inputs=[v13_7,v14_16(0),v14_15], cost=105.000000, )\n",
+      "      int v14_18 = mul(inputs=[v14_17,v1_1], cost=106.000000, )\n",
+      "      int v14_20 = sub(inputs=[v1_1,v14_19(1)], cost=1.000000, )\n",
+      "      int v14_22 = clamp(inputs=[v14_2,v14_21(0),v14_20], cost=108.000000, )\n",
+      "      int v14_23 = add(inputs=[v14_18,v14_22], cost=215.000000, )\n",
+      "      float v14_24 = load(memory=[m0], indices=[v14_23], cost=343.000000, )\n",
+      "      float v14_25 = mul(inputs=[v14_13,v14_24], cost=685.000000, )\n",
+      "      float v14_26 = add(inputs=[v13_4(0.f),v14_25], cost=686.000000, shape=[v12_5], )\n",
+      "      set(memory=[v13_4(0.f)], inputs=[v14_26], cost=687.000000, shape=[v12_5], )\n",
+      "    }\n",
+      "    int v15_1 = sub(inputs=[v1_1,v15_0(1)], cost=1.000000, )\n",
+      "    int v15_3 = clamp(inputs=[v5_4,v15_2(0),v15_1], cost=106.000000, )\n",
+      "    int v15_4 = mul(inputs=[v15_3,v1_1], cost=107.000000, )\n",
+      "    int v15_6 = sub(inputs=[v1_1,v15_5(1)], cost=1.000000, )\n",
+      "    int v15_8 = clamp(inputs=[v13_3,v15_7(0),v15_6], cost=108.000000, shape=[v12_2], )\n",
+      "    int v15_9 = add(inputs=[v15_4,v15_8], cost=216.000000, shape=[v12_2], )\n",
+      "    store(memory=[m2], inputs=[v13_4(0.f)], indices=[v15_9], cost=344.000000, shape=[v12_5], )\n",
+      "  }\n",
+      "  kernel(cost=0.000000, shape=[v1_0,v12_5], )\n",
+      "  {\n",
+      "    int v17_1 = add(inputs=[v5_4,v17_0(1)], cost=102.000000, )\n",
+      "    int v17_2 = sub(inputs=[v1_1,v17_1], cost=103.000000, )\n",
+      "    int v17_3 = thread_id(cost=0.000000, shape=[v1_0,v12_5], )\n",
+      "    int v17_4 = div(inputs=[v17_3,v17_2], cost=105.000000, shape=[v1_0,v12_5], )\n",
+      "    int v17_5 = mul(inputs=[v17_4,v17_2], cost=209.000000, shape=[v1_0,v12_5], )\n",
+      "    int v17_6 = sub(inputs=[v17_3,v17_5], cost=210.000000, shape=[v1_0,v12_5], )\n",
+      "    int v17_8 = add(inputs=[v5_4,v17_7(1)], cost=102.000000, )\n",
+      "    int v17_9 = add(inputs=[v17_6,v17_8], cost=313.000000, shape=[v1_0,v12_5], )\n",
+      "    int v17_11 = sub(inputs=[v1_0,v17_10(1)], cost=1.000000, )\n",
+      "    int v17_13 = clamp(inputs=[v17_4,v17_12(0),v17_11], cost=110.000000, shape=[v1_0,v12_5], )\n",
+      "    int v17_14 = mul(inputs=[v17_13,v1_1], cost=111.000000, shape=[v1_0,v12_5], )\n",
+      "    int v17_16 = sub(inputs=[v1_1,v17_15(1)], cost=1.000000, )\n",
+      "    int v17_18 = clamp(inputs=[v17_9,v17_17(0),v17_16], cost=318.000000, shape=[v1_0,v12_5], )\n",
+      "    int v17_19 = add(inputs=[v17_14,v17_18], cost=430.000000, shape=[v1_0,v12_5], )\n",
+      "    float v17_20 = load(memory=[m0], indices=[v17_19], cost=558.000000, shape=[v1_0,v12_5], )\n",
+      "    int v17_22 = sub(inputs=[v1_0,v17_21(1)], cost=1.000000, )\n",
+      "    int v17_24 = clamp(inputs=[v17_4,v17_23(0),v17_22], cost=110.000000, shape=[v1_0,v12_5], )\n",
+      "    int v17_25 = mul(inputs=[v17_24,v1_1], cost=111.000000, shape=[v1_0,v12_5], )\n",
+      "    int v17_27 = sub(inputs=[v1_1,v17_26(1)], cost=1.000000, )\n",
+      "    int v17_29 = clamp(inputs=[v5_4,v17_28(0),v17_27], cost=106.000000, )\n",
+      "    int v17_30 = add(inputs=[v17_25,v17_29], cost=218.000000, shape=[v1_0,v12_5], )\n",
+      "    float v17_31 = load(memory=[m1], indices=[v17_30], cost=346.000000, shape=[v1_0,v12_5], )\n",
+      "    int v17_33 = sub(inputs=[v1_1,v17_32(1)], cost=1.000000, )\n",
+      "    int v17_35 = clamp(inputs=[v5_4,v17_34(0),v17_33], cost=106.000000, )\n",
+      "    int v17_36 = mul(inputs=[v17_35,v1_1], cost=107.000000, )\n",
+      "    int v17_38 = sub(inputs=[v1_1,v17_37(1)], cost=1.000000, )\n",
+      "    int v17_40 = clamp(inputs=[v17_9,v17_39(0),v17_38], cost=318.000000, shape=[v1_0,v12_5], )\n",
+      "    int v17_41 = add(inputs=[v17_36,v17_40], cost=426.000000, shape=[v1_0,v12_5], )\n",
+      "    float v17_42 = load(memory=[m2], indices=[v17_41], cost=554.000000, shape=[v1_0,v12_5], )\n",
+      "    float v17_43 = mul(inputs=[v17_31,v17_42], cost=901.000000, shape=[v1_0,v12_5], )\n",
+      "    float v17_44 = sub(inputs=[v17_20,v17_43], cost=1460.000000, shape=[v1_0,v12_5], )\n",
+      "    int v17_46 = sub(inputs=[v1_0,v17_45(1)], cost=1.000000, )\n",
+      "    int v17_48 = clamp(inputs=[v17_4,v17_47(0),v17_46], cost=110.000000, shape=[v1_0,v12_5], )\n",
+      "    int v17_49 = mul(inputs=[v17_48,v1_1], cost=111.000000, shape=[v1_0,v12_5], )\n",
+      "    int v17_51 = sub(inputs=[v1_1,v17_50(1)], cost=1.000000, )\n",
+      "    int v17_53 = clamp(inputs=[v17_9,v17_52(0),v17_51], cost=318.000000, shape=[v1_0,v12_5], )\n",
+      "    int v17_54 = add(inputs=[v17_49,v17_53], cost=430.000000, shape=[v1_0,v12_5], )\n",
+      "    store(memory=[m0], inputs=[v17_44], indices=[v17_54], cost=2018.000000, shape=[v1_0,v12_5], )\n",
+      "  }\n",
+      "}\n",
+      "kernel(cost=0.000000, shape=[v18_0(1)], )\n",
+      "{\n",
+      "  int v19_3 = loop(inputs=[v19_2(0),v1_0,v19_1(1)], cost=100.000000, )\n",
+      "  {\n",
+      "    int v20_1 = sub(inputs=[v1_1,v20_0(1)], cost=1.000000, )\n",
+      "    int v20_3 = sub(inputs=[v1_0,v20_2(1)], cost=1.000000, )\n",
+      "    int v20_5 = clamp(inputs=[v19_3,v20_4(0),v20_3], cost=105.000000, )\n",
+      "    int v20_6 = mul(inputs=[v20_5,v1_1], cost=106.000000, )\n",
+      "    int v20_8 = sub(inputs=[v1_1,v20_7(1)], cost=1.000000, )\n",
+      "    int v20_10 = clamp(inputs=[v20_1,v20_9(0),v20_8], cost=6.000000, )\n",
+      "    int v20_11 = add(inputs=[v20_6,v20_10], cost=113.000000, )\n",
+      "    float v20_12 = load(memory=[m0], indices=[v20_11], cost=241.000000, )\n",
+      "    float v20_13 = mul(inputs=[v20_12,v20_12], cost=242.000000, )\n",
+      "    float v20_14 = add(inputs=[v19_0(0.f),v20_13], cost=243.000000, shape=[v18_1(1)], )\n",
+      "    set(memory=[v19_0(0.f)], inputs=[v20_14], cost=244.000000, shape=[v18_1(1)], )\n",
+      "  }\n",
+      "  float v21_0 = sqrt(inputs=[v19_0(0.f)], cost=4.000000, shape=[v18_1(1)], )\n",
+      "  int v21_2 = sub(inputs=[v1_1,v21_1(1)], cost=1.000000, )\n",
+      "  int v21_4 = sub(inputs=[v1_1,v21_3(1)], cost=1.000000, )\n",
+      "  int v21_6 = sub(inputs=[v1_1,v21_5(1)], cost=1.000000, )\n",
+      "  int v21_8 = clamp(inputs=[v21_2,v21_7(0),v21_6], cost=6.000000, )\n",
+      "  int v21_9 = mul(inputs=[v21_8,v1_1], cost=7.000000, )\n",
+      "  int v21_11 = sub(inputs=[v1_1,v21_10(1)], cost=1.000000, )\n",
+      "  int v21_13 = clamp(inputs=[v21_4,v21_12(0),v21_11], cost=6.000000, )\n",
+      "  int v21_14 = add(inputs=[v21_9,v21_13], cost=14.000000, )\n",
+      "  store(memory=[m2], inputs=[v21_0], indices=[v21_14], cost=146.000000, shape=[v18_0(1)], )\n",
+      "}\n",
+      "kernel(cost=0.000000, shape=[v1_0], )\n",
+      "{\n",
+      "  int v23_0 = thread_id(cost=0.000000, shape=[v1_0], )\n",
+      "  int v23_2 = sub(inputs=[v1_1,v23_1(1)], cost=1.000000, )\n",
+      "  int v23_4 = sub(inputs=[v1_0,v23_3(1)], cost=1.000000, )\n",
+      "  int v23_6 = clamp(inputs=[v23_0,v23_5(0),v23_4], cost=5.000000, shape=[v1_0], )\n",
+      "  int v23_7 = mul(inputs=[v23_6,v1_1], cost=6.000000, shape=[v1_0], )\n",
+      "  int v23_9 = sub(inputs=[v1_1,v23_8(1)], cost=1.000000, )\n",
+      "  int v23_11 = clamp(inputs=[v23_2,v23_10(0),v23_9], cost=6.000000, )\n",
+      "  int v23_12 = add(inputs=[v23_7,v23_11], cost=13.000000, shape=[v1_0], )\n",
+      "  float v23_13 = load(memory=[m0], indices=[v23_12], cost=141.000000, shape=[v1_0], )\n",
+      "  int v23_15 = sub(inputs=[v1_1,v23_14(1)], cost=1.000000, )\n",
+      "  int v23_17 = sub(inputs=[v1_1,v23_16(1)], cost=1.000000, )\n",
+      "  int v23_19 = sub(inputs=[v1_1,v23_18(1)], cost=1.000000, )\n",
+      "  int v23_21 = clamp(inputs=[v23_15,v23_20(0),v23_19], cost=6.000000, )\n",
+      "  int v23_22 = mul(inputs=[v23_21,v1_1], cost=7.000000, )\n",
+      "  int v23_24 = sub(inputs=[v1_1,v23_23(1)], cost=1.000000, )\n",
+      "  int v23_26 = clamp(inputs=[v23_17,v23_25(0),v23_24], cost=6.000000, )\n",
+      "  int v23_27 = add(inputs=[v23_22,v23_26], cost=14.000000, )\n",
+      "  float v23_28 = load(memory=[m2], indices=[v23_27], cost=142.000000, )\n",
+      "  float v23_29 = div(inputs=[v23_13,v23_28], cost=285.000000, shape=[v1_0], )\n",
+      "  int v23_31 = sub(inputs=[v1_1,v23_30(1)], cost=1.000000, )\n",
+      "  int v23_33 = sub(inputs=[v1_0,v23_32(1)], cost=1.000000, )\n",
+      "  int v23_35 = clamp(inputs=[v23_0,v23_34(0),v23_33], cost=5.000000, shape=[v1_0], )\n",
+      "  int v23_36 = mul(inputs=[v23_35,v1_1], cost=6.000000, shape=[v1_0], )\n",
+      "  int v23_38 = sub(inputs=[v1_1,v23_37(1)], cost=1.000000, )\n",
+      "  int v23_40 = clamp(inputs=[v23_31,v23_39(0),v23_38], cost=6.000000, )\n",
+      "  int v23_41 = add(inputs=[v23_36,v23_40], cost=13.000000, shape=[v1_0], )\n",
+      "  store(memory=[m1], inputs=[v23_29], indices=[v23_41], cost=426.000000, shape=[v1_0], )\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(qr.list_operations())"
    ]
   },
   {
