--- a/examples/Algorithms/qr.ipynb
+++ b/examples/Algorithms/qr.ipynb
@@ -2,22 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFrost module loaded!\n",
       "QRDecomposition:\n",
       "  Kernel count: 8\n",
       "  Intermediate buffers: 0\n",
       "  Host readbacks: 0\n",
       "  Host writes: 0\n",
-      "  Lines of generated code: 394\n",
-      "  IR Compile time: 1.510900 ms\n",
-      "  Compiler time: 1348.923706 ms\n",
+      "  Lines of generated code: 421\n",
+      "  IR Compile time: 1.544600 ms\n",
+      "  Compiler time: 1335.365112 ms\n",
       "\n"
      ]
     }
@@ -91,32 +90,12 @@
     "\n",
     "    return [Q, R]\n",
     "\n",
-    "def HouseholderQR():\n",
-    "    A = tf.input([-1, -1], tf.float32)\n",
-    "\n",
-    "    m, n = A.shape\n",
-    "    Q = tf.buffer([m, n])\n",
-    "    R = tf.buffer([n, n])\n",
-    "    \n",
-    "    Q = tf.eye(m)\n",
-    "    R = A\n",
-    "\n",
-    "    def loop_body(i):\n",
-    "        H = tf.eye(m)\n",
-    "        H[i:, i:] -= 2 * tf.outer(R[i:, i], R[i:, i]) / tf.norm(R[i:, i])\n",
-    "        Q = Q @ H\n",
-    "        R = H @ R\n",
-    "\n",
-    "    tf.loop(loop_body, 0, tf.min(m, n)-1, 1)\n",
-    "\n",
-    "    return [Q, R]\n",
-    "\n",
     "qr = tf.compile(QRDecomposition)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +121,7 @@
       "int v5_1 = sub(inputs=[v1_1,v5_0(1)], cost=1.000000, )\n",
       "int v5_4 = loop(inputs=[v5_2(0),v5_1,v5_3(1)], cost=101.000000, )\n",
       "{\n",
-      "  kernel(cost=0.000000, shape=[v6_1(1)], )\n",
+      "  kernel(cost=0.000000, shape=[v6_0(1)], )\n",
       "  {\n",
       "    int v7_3 = loop(inputs=[v7_2(0),v1_0,v7_1(1)], cost=100.000000, )\n",
       "    {\n",
@@ -154,17 +133,18 @@
       "      int v8_9 = add(inputs=[v8_4,v8_8], cost=213.000000, )\n",
       "      float v8_10 = load(memory=[m0], indices=[v8_9], cost=341.000000, )\n",
       "      float v8_11 = mul(inputs=[v8_10,v8_10], cost=342.000000, )\n",
-      "      float v8_12 = add(inputs=[v7_0(0.f),v8_11], cost=343.000000, shape=[v6_0(1)], )\n",
-      "      set(memory=[v7_0(0.f)], inputs=[v8_12], cost=344.000000, shape=[v6_0(1)], )\n",
+      "      float v8_12 = add(inputs=[v7_0(0.f),v8_11], cost=343.000000, shape=[v6_1(1)], )\n",
+      "      set(memory=[v7_0(0.f)], inputs=[v8_12], cost=344.000000, shape=[v6_1(1)], )\n",
       "    }\n",
-      "    float v9_0 = sqrt(inputs=[v7_0(0.f)], cost=4.000000, shape=[v6_0(1)], )\n",
-      "    int v9_2 = sub(inputs=[v1_1,v9_1(1)], cost=1.000000, )\n",
-      "    int v9_4 = clamp(inputs=[v5_4,v9_3(0),v9_2], cost=106.000000, )\n",
-      "    int v9_5 = mul(inputs=[v9_4,v1_1], cost=107.000000, )\n",
-      "    int v9_7 = sub(inputs=[v1_1,v9_6(1)], cost=1.000000, )\n",
-      "    int v9_9 = clamp(inputs=[v5_4,v9_8(0),v9_7], cost=106.000000, )\n",
-      "    int v9_10 = add(inputs=[v9_5,v9_9], cost=214.000000, )\n",
-      "    store(memory=[m2], inputs=[v9_0], indices=[v9_10], cost=346.000000, shape=[v6_1(1)], )\n",
+      "    float v9_0 = float(inputs=[v7_0(0.f)], cost=1.000000, shape=[v6_1(1)], )\n",
+      "    float v9_1 = sqrt(inputs=[v9_0], cost=5.000000, shape=[v6_1(1)], )\n",
+      "    int v9_3 = sub(inputs=[v1_1,v9_2(1)], cost=1.000000, )\n",
+      "    int v9_5 = clamp(inputs=[v5_4,v9_4(0),v9_3], cost=106.000000, )\n",
+      "    int v9_6 = mul(inputs=[v9_5,v1_1], cost=107.000000, )\n",
+      "    int v9_8 = sub(inputs=[v1_1,v9_7(1)], cost=1.000000, )\n",
+      "    int v9_10 = clamp(inputs=[v5_4,v9_9(0),v9_8], cost=106.000000, )\n",
+      "    int v9_11 = add(inputs=[v9_6,v9_10], cost=214.000000, )\n",
+      "    store(memory=[m2], inputs=[v9_1], indices=[v9_11], cost=347.000000, shape=[v6_0(1)], )\n",
       "  }\n",
       "  kernel(cost=0.000000, shape=[v1_0], )\n",
       "  {\n",
@@ -273,7 +253,7 @@
       "    store(memory=[m0], inputs=[v17_44], indices=[v17_54], cost=2018.000000, shape=[v1_0,v12_5], )\n",
       "  }\n",
       "}\n",
-      "kernel(cost=0.000000, shape=[v18_0(1)], )\n",
+      "kernel(cost=0.000000, shape=[v18_1(1)], )\n",
       "{\n",
       "  int v19_3 = loop(inputs=[v19_2(0),v1_0,v19_1(1)], cost=100.000000, )\n",
       "  {\n",
@@ -286,19 +266,20 @@
       "    int v20_11 = add(inputs=[v20_6,v20_10], cost=113.000000, )\n",
       "    float v20_12 = load(memory=[m0], indices=[v20_11], cost=241.000000, )\n",
       "    float v20_13 = mul(inputs=[v20_12,v20_12], cost=242.000000, )\n",
-      "    float v20_14 = add(inputs=[v19_0(0.f),v20_13], cost=243.000000, shape=[v18_1(1)], )\n",
-      "    set(memory=[v19_0(0.f)], inputs=[v20_14], cost=244.000000, shape=[v18_1(1)], )\n",
+      "    float v20_14 = add(inputs=[v19_0(0.f),v20_13], cost=243.000000, shape=[v18_0(1)], )\n",
+      "    set(memory=[v19_0(0.f)], inputs=[v20_14], cost=244.000000, shape=[v18_0(1)], )\n",
       "  }\n",
-      "  float v21_0 = sqrt(inputs=[v19_0(0.f)], cost=4.000000, shape=[v18_1(1)], )\n",
-      "  int v21_2 = sub(inputs=[v1_1,v21_1(1)], cost=1.000000, )\n",
-      "  int v21_4 = sub(inputs=[v1_1,v21_3(1)], cost=1.000000, )\n",
-      "  int v21_6 = sub(inputs=[v1_1,v21_5(1)], cost=1.000000, )\n",
-      "  int v21_8 = clamp(inputs=[v21_2,v21_7(0),v21_6], cost=6.000000, )\n",
-      "  int v21_9 = mul(inputs=[v21_8,v1_1], cost=7.000000, )\n",
-      "  int v21_11 = sub(inputs=[v1_1,v21_10(1)], cost=1.000000, )\n",
-      "  int v21_13 = clamp(inputs=[v21_4,v21_12(0),v21_11], cost=6.000000, )\n",
-      "  int v21_14 = add(inputs=[v21_9,v21_13], cost=14.000000, )\n",
-      "  store(memory=[m2], inputs=[v21_0], indices=[v21_14], cost=146.000000, shape=[v18_0(1)], )\n",
+      "  float v21_0 = float(inputs=[v19_0(0.f)], cost=1.000000, shape=[v18_0(1)], )\n",
+      "  float v21_1 = sqrt(inputs=[v21_0], cost=5.000000, shape=[v18_0(1)], )\n",
+      "  int v21_3 = sub(inputs=[v1_1,v21_2(1)], cost=1.000000, )\n",
+      "  int v21_5 = sub(inputs=[v1_1,v21_4(1)], cost=1.000000, )\n",
+      "  int v21_7 = sub(inputs=[v1_1,v21_6(1)], cost=1.000000, )\n",
+      "  int v21_9 = clamp(inputs=[v21_3,v21_8(0),v21_7], cost=6.000000, )\n",
+      "  int v21_10 = mul(inputs=[v21_9,v1_1], cost=7.000000, )\n",
+      "  int v21_12 = sub(inputs=[v1_1,v21_11(1)], cost=1.000000, )\n",
+      "  int v21_14 = clamp(inputs=[v21_5,v21_13(0),v21_12], cost=6.000000, )\n",
+      "  int v21_15 = add(inputs=[v21_10,v21_14], cost=14.000000, )\n",
+      "  store(memory=[m2], inputs=[v21_1], indices=[v21_15], cost=147.000000, shape=[v18_1(1)], )\n",
       "}\n",
       "kernel(cost=0.000000, shape=[v1_0], )\n",
       "{\n",
@@ -340,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -349,20 +330,20 @@
      "text": [
       "QR decomposition is correct: True\n",
       "QR decomposition using TensorFrost is correct: True\n",
-      "Error: 1.1102230246251565e-16\n",
-      "Error using TensorFrost: 9.80524335107431e-08\n",
+      "Error: 2.200843885906926e-16\n",
+      "Error using TensorFrost: 1.1377014046727699e-07\n",
       "Q:\n",
-      " [[ 0.12411568  0.7326195  -0.22203594  0.49314734  0.39416975]\n",
-      " [ 0.57611185  0.37130576 -0.2244676  -0.6756834  -0.1526212 ]\n",
-      " [ 0.17443486  0.29325262  0.45711353  0.3281024  -0.75297487]\n",
-      " [ 0.36590293 -0.04185599  0.77686805 -0.08293105  0.50394624]\n",
-      " [ 0.6988403  -0.4874952  -0.29637414  0.4309628  -0.02009838]]\n",
+      " [[ 0.35296986  0.49295723 -0.4748645   0.41972458 -0.4803549 ]\n",
+      " [ 0.24595608  0.32043248  0.42037672 -0.6560659  -0.47926018]\n",
+      " [ 0.79611266 -0.375611   -0.29546162 -0.26456553  0.26043925]\n",
+      " [ 0.13496858  0.7060105   0.10527628 -0.03834345  0.68613285]\n",
+      " [ 0.40361616 -0.12158052  0.7066871   0.5674008  -0.03101429]]\n",
       "R:\n",
-      " [[ 1.0132961   0.9248877   0.8464499   1.1308571   0.9522835 ]\n",
-      " [ 0.          0.9544738   0.7976799   0.76563853  0.13753597]\n",
-      " [ 0.          0.          0.6116486   0.28257155 -0.01758742]\n",
-      " [ 0.          0.          0.          0.6672542   0.3415734 ]\n",
-      " [ 0.          0.          0.          0.          0.28049704]]\n"
+      " [[ 0.86185604  0.76742417  0.42778966  0.9360504   1.016061  ]\n",
+      " [ 0.          1.2004343   0.39798295  1.0520579   0.75820005]\n",
+      " [ 0.          0.          0.5043702   0.01626269  0.06227558]\n",
+      " [ 0.          0.          0.          0.3219147  -0.5427317 ]\n",
+      " [ 0.          0.          0.          0.          0.31824994]]\n"
      ]
     }
    ],
@@ -394,24 +375,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time for TensorFrost QR decomposition: 0.18627309799194336\n",
-      "Time for built-in NumPy QR decomposition: 4.043566703796387\n",
-      "Error: 0.0012291038\n",
-      "Error using TensorFrost: 0.001878134\n"
+      "Time for TensorFrost QR decomposition: 0.06299972534179688\n",
+      "Time for built-in NumPy QR decomposition: 0.4740009307861328\n",
+      "Error: 0.0004559275\n",
+      "Error using TensorFrost: 0.00056891394\n"
      ]
     }
    ],
    "source": [
     "#performance test\n",
     "import time\n",
-    "A = np.random.rand(5000, 5000).astype(np.float32)\n",
+    "A = np.random.rand(2000, 2000).astype(np.float32)\n",
     "\n",
     "#naive NumPy QR decomposition\n",
     "#start = time.time()\n",
